Centered the canvas

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel='stylesheet' type="text/css" href="app.css">
 </head>
 <body>
+    <div class="center-me">
     <canvas id='canvas'></canvas>
+    </div>
 </body>
 </html>
